--- a/app/assets/stylesheets/components/_loader.scss
+++ b/app/assets/stylesheets/components/_loader.scss
@@ -15,6 +15,8 @@
   z-index: 1;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  z-index: 99999;
   // border: 16px solid #f3f3f3;
   // border-radius: 50%;
   // border-top: 16px solid #3498db;
