--- a/app/assets/stylesheets/components/_lunch-image.scss
+++ b/app/assets/stylesheets/components/_lunch-image.scss
@@ -19,7 +19,7 @@
   animation: spin 4s infinite;
   z-index: 9999;
   display: block;
-  margin: 0 auto;
+  margin: 30px auto;
   max-width: 250px;
   max-height: 200px;
 }
